# AutoMint

./: .gitignore  AUTOMINT_GUIDE.md  C0-8.patch  CHANGELOG.md  alchemy-webhook-fix.patch  automint-rate-limit.patch  c03-blocking-fixes.patch  c03-nonce-allocator.patch  c04-receipt-timeout-safety.patch  c04-task-based-telegram.patch  c1-fix.patch  c1-hardening.patch  c1-security-fix.diff  c2-webhook-auth.patch  drizzle.config.ts  eslint.config.mjs  mint-signing-fix.patch  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: ci.yml
docs/: ai-handoff.md  dependency-modernization-report.md  frontend-audit.md  integration-wiring-report.md
prisma/: schema.prisma
scripts/: apply-patches.js  check-migrations.js  update-knowledge-base.js
src/: instrumentation-client.ts  instrumentation.ts  middleware.ts  proxy.ts
src/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/app/(authenticated)/: layout.tsx  loading.tsx  template.tsx
src/components/: Navbar.tsx  Sidebar.tsx  app-shell.tsx  route-transition.tsx
src/components/activity/: ActivityTimeline.tsx
src/components/auth/: automint-user-button.tsx
src/components/dashboard/: ActivityCard.tsx  StatCard.tsx  ai-provider-banner.tsx  lazy-mint-activity-chart.tsx  mint-activity-chart.tsx  system-health-card.tsx
src/hooks/: use-event-stream.ts  useWasmCrypto.ts
src/lib/: clerk-appearance.ts  logger.ts  resolve-mint-intent.ts  validation.ts
src/types/: mint.ts  wasm.d.ts
wasm-crypto/: Cargo.toml  README.md
wasm-crypto/src/: lib.rs
(+339 files in other folders)
