[package]
name = "wasm-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
rand = "0.8"
console_error_panic_hook = "0.1"
aes-gcm = "0.10"
base64 = "0.22"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
